# howeverautoware

./: .pre-commit-config-ansible.yaml  LICENSE  LICENSE.HOWEVER  README.md  autoware.repos  bootstrap_vehicle_stack.sh  my_vehicle.repos
.github/: pull_request_template.md
.github/workflows/: ci.yml  mirror-main-branch.yaml  pre-commit-ansible.yaml
configs/calibration/: README.md
configs/localization/: global_defaults.yaml
configs/localization/regions/: beijing.yaml  shanghai.yaml
configs/qos/: default_qos.yaml
configs/vehicles/mpv/: params.yaml
configs/vehicles/robotaxi/: params.yaml
configs/vehicles/suv/: params.yaml
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/: COMPLIANCE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  architecture.md  change_management.md  compatibility_matrix.md  deployment_sop.md  monitoring_and_profiling.md  qos_policy.md
docs/interface_changes/: .gitkeep
docs/project-management/: 2025-activity-log.md  2025-execution-plan.md
my_modules/ros2_pkgs/: README.md
my_modules/ros2_pkgs/my_vehicle_control_safety/: CMakeLists.txt  package.xml
my_modules/ros2_pkgs/my_vehicle_control_safety/src/: control_safety_node.cpp
my_modules/ros2_pkgs/my_vehicle_perception_bridge/: CMakeLists.txt  package.xml
my_modules/ros2_pkgs/my_vehicle_perception_bridge/src/: perception_topic_bridge_node.cpp
my_modules/ros2_pkgs/my_vehicle_planning_strategies/: CMakeLists.txt  package.xml  plugins.xml
my_modules/ros2_pkgs/my_vehicle_planning_strategies/include/my_vehicle_planning_strategies/: planning_strategy.hpp
my_modules/ros2_pkgs/my_vehicle_planning_strategies/src/: default_strategy_plugin.cpp
scripts/: check_message_breaking_changes.sh  collect_topic_metrics.sh  dev_container_entry.sh  post_upstream_merge.sh  profile_realtime.sh  run_full_regression.sh  sync_upstreams.sh
tests/kpi/: README.md  e2e_scenario_kpi.yaml
tests/rosbag_replay/: README.md  run_rosbag_regression.sh
