<?xml version="1.0"?>
<package format="3">
  <!-- Change Source: Autoware 30-point implementation request | Date: 2026-04-07 -->
  <name>my_vehicle_perception_bridge</name>
  <version>0.1.0</version>
  <description>Topic-based perception bridge to decouple upstream perception producers/consumers.</description>
  <maintainer email="dev@example.com">my-vehicle-team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
